[UI] Tooltip in Dropdown Wrap Fix
Fixes: #1617

--- a/src/clarity-angular/popover/tooltip/_tooltips.clarity.scss
+++ b/src/clarity-angular/popover/tooltip/_tooltips.clarity.scss
@@ -94,6 +94,7 @@ $clr-tooltip-adjusted-margin: 0.666667rem !default;
             visibility: hidden;
             opacity: 0;
             transition: opacity 0.3s linear;
+            white-space: normal;
             z-index: map-get($clr-layers, tooltips);
         }
 
